--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO Travels</title>
-
-    <!-- google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/70e946ea0a.js" crossorigin="anonymous"></script>
     <!-- tailwind -->
@@ -19,9 +13,13 @@
 
     <!-- style -->
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
         * {
             font-family: "Raleway", sans-serif;
         }
+        p{color: rgba(0, 0, 0, 0.465);}
+        .inter{ font-family: "Inter", sans-serif;}
     </style>
 
 </head>
@@ -29,7 +27,7 @@
 <body>
 
     <!-- header -->
-    <header class="mt-5 container mx-auto">
+    <header class="mt-5 mb-56 container mx-auto">
 
         <!-- navbar -->
         <nav>
@@ -75,14 +73,13 @@
             <div class="text-center space-y-9">
                 <h1 class="text-7xl font-extrabold text-white pt-[100px]">End-to-End Travel with <br> <span
                         class="text-[#1DD100]">Go Travels</span> </h1>
-                <p class="w-[550px] mx-auto text-gray-200 text-base font-medium">Yes, you can run unit tests and view
-                    the results directly within the app. The integrated testing features allow for a streamlined .</p>
-                <button class="btn bg-[#1DD100] border-none text-[20px] font-semibold text-black"><a>Buy Tickets</a></button>
+                <p class="w-[550px] mx-auto text-gray-200 text-base text-lg ">Explore boundless adventures with our travel website. Discover destinations, book flights, and embark on unforgettable journeys!</p>
+                <button class="btn bg-[#1DD100] border-none text-[20px] font-bold"><a>Buy Tickets</a></button>
 
             </div>
 
             <!-- banner-buttons -->
-            <div class="flex items-center justify-center gap-6 relative top-[90px]">
+            <div class="flex items-center justify-center gap-6 relative top-[75px]">
                 <div class="flex items-center gap-5 bg-white p-5 rounded-xl border-b-4 border-[#1DD100]">
                     <img src="./images/people.png" alt="" class="border-dashed  px-2">
                     <div>
@@ -111,6 +108,47 @@
 
     </header>
 
+    <main>
+    
+        <!-- coupon section -->
+        <section class="container mx-auto text-left font-bold ">
+            <!-- title -->
+            <h2 class="font-bold text-center text-5xl mb-12">Best offers for you</h2>
+
+            <!-- coupon -->
+            <div class="flex justify-between items-center gap-5 ">
+                <div class="flex justify-evenly items-center bg-[#ffbf0f] w-[80%]   rounded-3xl">
+                    <div class="text-left ">
+                        <h3 class="inter text-[40px] font-extrabold ">15% OFF</h3>
+                        <h5 class="inter mb-3 text-[25px] ">on your next purchase</h5>
+                        <p class="inter  ">use by January 2024</p>
+                    </div>
+                    <img src="./images/cupon-devider.png" alt="" class="mr-2">
+                    <div class="">
+                        <h2 class="text-[40px] font-extrabold">NEW15</h2>
+                        <p class="inter text-[15px] font-semibold ">Coupon Code</p>
+                    </div>
+                </div>
+
+                <div class="flex justify-evenly items-center bg-[#f78c9c] w-[80%]    rounded-3xl">
+                    <div>
+                        <h3 class="inter text-[40px] font-extrabold">20% OFF</h3>
+                        <h5 class="inter mb-3 text-[25px]" >on your next purchase</h5>
+                        <p>use by January 2024</p>
+                    </div>
+                    <img src="./images/cupon-devider.png" alt="" class="">
+                    <div class="">
+                        <h2 class="text-[40px] font-extrabold ">Couple 20</h2>
+                        <p class="font-semibold">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-16">
+                <button class="btn btn-outline btn-success text-[#1DD100] border-[#1DD100] font-semibold text-xl">See All Offers</button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
