--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO Travels</title>
+    <link rel="shortcut icon" href="./images/bus-logo.png" type="image/x-icon">
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/70e946ea0a.js" crossorigin="anonymous"></script>
     <!-- tailwind -->
@@ -15,11 +16,22 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
         * {
             font-family: "Raleway", sans-serif;
         }
-        p{color: rgba(0, 0, 0, 0.465);}
-        .inter{ font-family: "Inter", sans-serif;}
+
+        p {
+            font-family: "Inter", sans-serif;
+        }
+
+        span {
+            font-family: "Inter", sans-serif;
+        }
+
+        .inter {
+            font-family: "Inter", sans-serif;
+        }
     </style>
 
 </head>
@@ -73,7 +85,8 @@
             <div class="text-center space-y-9">
                 <h1 class="text-7xl font-extrabold text-white pt-[100px]">End-to-End Travel with <br> <span
                         class="text-[#1DD100]">Go Travels</span> </h1>
-                <p class="w-[550px] mx-auto text-gray-200 text-base text-lg ">Explore boundless adventures with our travel website. Discover destinations, book flights, and embark on unforgettable journeys!</p>
+                <p class="w-[550px] mx-auto text-gray-200 text-base text-lg ">Explore boundless adventures with our
+                    travel website. Discover destinations, book flights on unforgettable journeys!</p>
                 <button class="btn bg-[#1DD100] border-none text-[20px] font-bold"><a>Buy Tickets</a></button>
 
             </div>
@@ -109,8 +122,8 @@
     </header>
 
     <main>
-    
-        <!-- coupon section -->
+
+        <!-- sectipon coupon  -->
         <section class="container mx-auto text-left font-bold ">
             <!-- title -->
             <h2 class="font-bold text-center text-5xl mb-12">Best offers for you</h2>
@@ -133,7 +146,7 @@
                 <div class="flex justify-evenly items-center bg-[#f78c9c] w-[80%]    rounded-3xl">
                     <div>
                         <h3 class="inter text-[40px] font-extrabold">20% OFF</h3>
-                        <h5 class="inter mb-3 text-[25px]" >on your next purchase</h5>
+                        <h5 class="inter mb-3 text-[25px]">on your next purchase</h5>
                         <p>use by January 2024</p>
                     </div>
                     <img src="./images/cupon-devider.png" alt="" class="">
@@ -145,10 +158,272 @@
             </div>
 
             <div class="text-center mt-16">
-                <button class="btn btn-outline btn-success text-[#1DD100] border-[#1DD100] font-semibold text-xl">See All Offers</button>
+                <button class="btn btn-outline btn-success text-[#1DD100] border-[#1DD100] font-semibold text-xl">See
+                    All Offers</button>
+            </div>
+        </section>
+
+        <!-- ticket  -->
+        <section class="border-[#1DD100] bg-[#fff7f7] rounded-t-[100px]  border-t-2 mt-52 pb-52">
+            <div>
+                <h3 class=" text-5xl font-bold rounded pt-28 text-center">Go Travels</h3>
+                <p class="inter text-gray-700 text-center px-80 pt-6 pb-10 text-lg">Welcome to our Traveling website,
+                    the ultimate destination for <br> adventurers, dreamers, and travel enthusiasts alike!</p>
+            </div>
+            <!-- Ticket Seat  -->
+            <div class="container flex flex-row justify-between bg-white w-11/12 mx-auto rounded-3xl">
+                <div class="flex flex-col justify-between w-[70%] pt-10 px-8 ">
+                    <div class="flex justify-between mx-4">
+                        <!-- go travels -->
+                        <div class=" flex gap-3">
+                            <div>
+                                <img src="./images/bus-logo.png" alt="">
+                            </div>
+                            <div>
+                                <h3 class="font-raleway text-3xl font-bold ">Go Travels</h3>
+                                <p class="inter">Coach-009-WEB ! AC_Business</p>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="flex rounded-xl p-4 bg-[#1dd10026]  gap-3">
+                                <img src="./images/seat-green.png" alt />
+                                <p class="inter text-lg font-medium text-[#1DD100]  text-[#1DD100] ">
+                                    <span class="inter ">40</span> Seats left
+                                </p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="bg-[#fff7f7] mt-7 mb-7 rounded-3xl">
+                        <div class=" flex justify-between mx-auto border-b-2 border-dashed w-[90%] py-8 ">
+                            <p class="">Route</p>
+                            <p class="font-bold">Dhaka-Sylhet</p>
+                        </div>
+                        <div class=" flex justify-between mx-auto border-b-2 border-dashed w-[90%] py-8 ">
+                            <p>Departure Time</p>
+                            <p class="font-bold">9:00 PM</p>
+                        </div>
+                        <div class="pt-6 pb-8 flex  gap-2 flex-row justify-between w-[90%] mx-auto">
+                            <button class="px-4 bg-[#0307120d] rounded-xl py-5 inter font-medium text-base">Boarding
+                                Point - Laxmipur</button>
+                            <button class="px-4 bg-[#0307120d] rounded-xl py-5 inter font-medium text-base">Dropping
+                                Point -
+                                Bogura</button>
+                            <button class="px-4 bg-[#0307120d] rounded-xl py-5 inter font-medium text-base">Est. Time -
+                                11
+                                Hour</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- image -->
+                <img class="flex" src="./images/info-devider.png" alt="">
+                <!-- price sec -->
+                <div class="flex flex-col justify-center items-center pr-20 ">
+                    <img src="./images/fare.png" alt="">
+                    <p class=" text-3xl  text-center font-bold  ">
+                        <span>550</span> Taka
+                    </p>
+                    <p class="text-2xl text-center text-[#03071299] font-semibold ">
+                        Per seat
+                    </p>
+                </div>
+            </div>
+            <!-- seat selection -->
+            <div class="container mx-auto bg-white flex flex-row justify-between mt-8 rounded-3xl w-11/12">
+                <div class="w-3/5">
+                    <h2 class="  text-2xl font-semibold pt-8 pb-6 mx-8 border-b-2 border-dashed ">Select Your Seat
+                    </h2>
+                    <div class="flex justify-between items-center pt-8 pb-6 mx-8 border-b-2 border-dashed ">
+                        <div class="flex items-center gap-x-3">
+                            <img src="./images/seat-gray.png" alt="">
+                            <p class=" text-lg font-medium inter opacity-50 ">Available</p>
+                        </div>
+                        <div class="flex items-center gap-x-3">
+                            <img src="./images/seat-green-filled.png" alt="">
+                            <p class=" text-lg text-[#1DD100]  font-extrabold inter opacity-50 ">Selected</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col justify-center pt-8 pb-20 mx-8 inter ">
+                        <div>
+                            <div class="flex justify-end pb-3">
+                                <div class=" flex justify-center rounded-xl bg-[#f7f4f0] w-[20%] py-4 "><img
+                                        src="./images/wheel.svg" alt></div>
+                            </div>
+                            <div class="grid grid-cols-11 gap-8">
+                                <div class="inter h-full flex flex-col gap-4 col-span-1 items-center">
+                                    <p class="py-4">A</p>
+                                    <p class="py-4">B</p>
+                                    <p class="py-4">C</p>
+                                    <p class="py-4">D</p>
+                                    <p class="py-4">E</p>
+                                    <p class="py-4">F</p>
+                                    <p class="py-4">G</p>
+                                    <p class="py-4">H</p>
+                                    <p class="py-4">I</p>
+                                    <p class="py-4">J</p>
+                                </div>
+                                <div class="inter grid grid-cols-2 gap-4 col-span-5">
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">A1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">A2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">B1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">B2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">C1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">C2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">D1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">D2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">E1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">E2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">F1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">F2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">G1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">G2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">H1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">H2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">I1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">I2</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">J1</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">J2</button>
+                                </div>
+                                <div class="inter grid grid-cols-2 gap-4 col-span-5 ">
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">A3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">A4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">B3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">B4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">C3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">C4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">D3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">D4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">E3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">E4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">F3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">F4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">G3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">G4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">H3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">H4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">I3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">I4</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">J3</button>
+                                    <button class="selected-seat py-4 bg-[#f7f4f0] rounded-xl">J4</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- border -->
+                <div class="py-7 flex  ">
+                    <div class="border-2 border-dashed"></div>
+                </div>
+                <!-- Seat  -->
+                <div class="w-2/5">
+                    <h2 class=" inter text-2xl font-semibold pt-8 pb-6 mx-8 border-b-2 border-dashed ">
+                        Select Your Seat</h2>
+                    <!-- Seat -->
+                    <div class="bg-[#F7F8F8] rounded-2xl p-8 mx-8 mt-8">
+                        <!-- Table -->
+                        <div class="overflow-x-auto">
+                            <table class="table text-base">
+                                <!-- table header -->
+                                <thead>
+                                    <tr class="text-base border-b-2 border-gray-300 border-dotted ">
+                                        <th class="px-0">Seat <span
+                                                class="text-sm bg-[#1DD100] px-2 rounded-sm text-white">0</span></th>
+                                        <th>Class</th>
+                                        <th class="text-right px-0">Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- row  -->
+                                    <tr>
+                                        <td class="px-0"></td>
+                                        <td></td>
+                                        <td class="text-right px-0"></td>
+                                    </tr>
+                                    <!-- row -->
+                                    <tr>
+                                        <td class="px-0"></td>
+                                        <td></td>
+                                        <td class="text-right px-0"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <!-- total price -->
+                        <div class="flex justify-between border-t-[1px] border-black pt-2 font-medium text-base">
+                            <p>Total Price</p>
+                            <p>BDT <span>0</span> </p>
+                        </div>
+
+                        <!-- apply Coupon button -->
+                        <div class="flex justify-between mt-5 bg-white py-4 px-3 rounded-xl">
+                            <input type="text" placeholder="Have any copupon?"
+                                class="focus:border-none focus:outline-none ml-4 bg-transparent" />
+                            <button
+                                class="px-8 py-3 rounded-xl text-white bg-[#1DD100] font-semibold disabled:bg-slate-800"
+                                disabled>Apply</button>
+                        </div>
+
+                        <!-- grand price -->
+                        <div class="flex justify-between pt-6 font-medium text-base">
+                            <p>Grand Price</p>
+                            <p>BDT <span>0</span></p>
+                        </div>
+
+                    </div>
+                    <!-- input info  -->
+                    <div class="mx-8 mt-8">
+                        <p class="font-bold">Passenger Name*</p>
+                        <input class="px-6 py-5 border-[1px] w-full rounded-xl focus:outline-none my-3 bg-transparent"
+                            type="text" placeholder="Enter your name" required>
+                        <p class="font-bold">Phone Number*</p>
+                        <input class="px-6 py-5 border-[1px] focus:outline-none w-full rounded-xl my-3 bg-transparent"
+                            type="number" placeholder="Enter your phone number" required>
+                        <p class="font-bold">Email ID</p>
+                        <input class="px-6 py-5 border-[1px] focus:outline-none w-full rounded-xl my-3 bg-transparent"
+                            type="text" placeholder="Enter your email id">
+                        <button id
+                            class="py-4 w-full bg-[#1DD100] text-white font-bold rounded-md disabled:bg-slate-800"
+                            disabled>Next</button>
+                    </div>
+                    <div class="flex justify-evenly underline py-4 pb-8">
+                        <a class="cursor-pointer">Terms and Conditions</a>
+                        <a class="cursor-pointer">Cancellation Policy</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+
+    <!-- footer -->
+    <footer class="bg-black text-white mx-auto ">
+        <div class="w-11/12 mx-auto container">
+            <div class="flex justify-between items-center pt-32 pb-12 border-b-[1px] border-dashed">
+                <div>
+                    <h3 class="font-extrabold text-4xl pb-6">Go Travels</h3>
+                    <p class="inter text-lg w-3/5 opacity-80">Go Travels is a digital
+                        platform to make your daily commuting better.</p>
+                </div>
+                <div>
+                    <p class="text-xl font-semibold pb-5">Download Our App</p>
+                    <img src="./images/googleplaysercive.svg" class="hover:cursor-pointer" alt>
+                </div>
+            </div>
+            <div class="flex justify-between items-center pb-32 pt-8">
+                <div>
+                    <p class="opacity-70">@all rights reserved, Go Travels services
+                        limited.2024</p>
+                </div>
+                <div class="flex justify-between list-none gap-8 text-inter font-medium">
+                    <li><a>Terms & condition</a></li>
+                    <li><a>Return & refund policy</a></li>
+                    <li><a>Privacy policy</a></li>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
 
 </html>
